fix bugs in proof of concept html report generating